Added Camera Comp and Crouch bindings

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,3 +11,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/Hoards")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="HoardsGameModeBase")
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Maps/P_TestMap.P_TestMap
+GameDefaultMap=/Game/Maps/P_TestMap.P_TestMap
+
